# nodejs-native-addon-with-aspose.words.cpp

./: .gitignore  CMakeLists.txt  index.js  package-lock.json  package.json  readme.md
Aspose.Words.Cpp/: aspose.words.cpp-config-version.cmake  aspose.words.cpp-config.cmake  aspose.words.cpp.targets
Aspose.Words.Cpp/include/Aspose.Words.Cpp/: AbsolutePositionTab.h  AsposeWordsLibrary.h  Body.h  Bookmark.h  BookmarkCollection.h  BookmarkEnd.h  BookmarkStart.h  Border.h  BorderCollection.h  BorderType.h  (+149 more)
CodePorting.Native.Cs2Cpp_api_21.10/: CodePorting.Native.Cs2Cpp.API.targets  codeporting.native.cs2cpp-config-version.cmake  codeporting.native.cs2cpp-config.cmake
CodePorting.Native.Cs2Cpp_api_21.10/include/: defines.h  detail.h  fwd.h
CodePorting.Native.Cs2Cpp_api_21.10/lib/: CodePorting.Native.Cs2Cpp-targets-clang3_libstdcpp-release.cmake  CodePorting.Native.Cs2Cpp-targets-clang3_libstdcpp.cmake  CodePorting.Native.Cs2Cpp-targets-gcc6-release.cmake  CodePorting.Native.Cs2Cpp-targets-gcc6.cmake  CodePorting.Native.Cs2Cpp-targets-vc14x64-debug.cmake  CodePorting.Native.Cs2Cpp-targets-vc14x64-release.cmake  CodePorting.Native.Cs2Cpp-targets-vc14x64.cmake  CodePorting.Native.Cs2Cpp-targets-vc14x86-debug.cmake  CodePorting.Native.Cs2Cpp-targets-vc14x86-release.cmake  CodePorting.Native.Cs2Cpp-targets-vc14x86.cmake  aspose_cpp_vc14x64.lib  aspose_cpp_vc14x64d.lib  aspose_cpp_vc14x86.lib  aspose_cpp_vc14x86d.lib
CodePorting.Native.Cs2Cpp_api_21.10/pch/: aspose_pch.h
license/: End User License Agreement.html
src/: greeting.cpp  greeting.hpp  index.cpp
tests/: runAddon.js
(+1536 files in other folders)
